--- a/index2.html
+++ b/index2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-      <title>Assignment1</title>
+      <title>project1</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
      <!-- Plugin CSS -->
   <link href="css/vanilla-calendar.min.css" rel="stylesheet">
