--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="js/app.js"></script>
     <meta charset="utf-8" />
   </head>
   <body style="display: flex; align-items: center;">    
@@ -29,14 +28,16 @@
             <input style="display: none;"  type="text" id="Re-enter Password" name="Re-enter Password">
         </div>
         
-        <input onclick="loadmainPage()" style="grid-area: input1; margin-top: 20px;" type="button" value="Log In">
-        <input  style="grid-area: input2; margin-top: 20px;" type="submit" value="Sin Up">
+        <input onclick="loadmainPage()" type="submit" style="grid-area: input1; margin-top: 20px;" value="Log In">
+        <input  style="grid-area: input2; margin-top: 20px;" type="submit" value="Sign Up">
       </form>
 
 </section>
       <script>
        function loadmainPage(){
-        console.log(true);
+        
+        let Uname = $("#Uname").val();
+        localStorage.setItem("Uname", Uname);
         window.open("index2.html");
        }
       </script>
