--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <meta charset="utf-8" />
+  <script src="js/mainPage.js"></script>
 </head>
 
 <body style="display: flex; align-items: center;">
@@ -75,7 +76,7 @@
       $("#defaultCanvas0").css("height", height);
     });
 
-
+   
   </script>
 </body>
 
