--- a/index2.html
+++ b/index2.html
@@ -2,11 +2,14 @@
 <html lang="en">
   <head>
       <title>project1</title>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/p5.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css">
      <!-- Plugin CSS -->
   <link href="css/vanilla-calendar.min.css" rel="stylesheet">
   <!-- Plugin JS -->
   <script src="js/vanilla-calendar.min.js" defer></script>
+ 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/app.js"></script>
    
@@ -27,7 +30,9 @@
                     date.setYear(year);
                     date.setMonth(parseInt(month) - 1);
                     date.setDate(day);
+                    stringDate = $("#date").text();
                     loadData();
+                    getweatherData();
                 },
                 },});
 				calendar.init();
@@ -89,6 +94,7 @@
           date.setDate(date.getDate() + 1);
           setDate();
           loadData();
+          getweatherData();
           });
 
           $( "#leftArrow").click(function () {
@@ -97,9 +103,12 @@
            date.setDate(date.getDate() - 1);
            setDate();
            loadData();
+           getweatherData();
            });
 
       </script>
-   
+      <main>
+      </main>
+      <script src="./js/sketch2.js"></script>
   </body>
 </html>
